[gd_scene load_steps=5 format=3 uid="uid://gytbmjwin2bx"]

[ext_resource type="Texture2D" uid="uid://33ri277wn0iu" path="res://icon.svg" id="1_ru5g4"]
[ext_resource type="Script" uid="uid://be6tg5v4lwpm5" path="res://testes/breakable_ground.gd" id="1_vmnb5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8demv"]
size = Vector2(160, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vmnb5"]
radius = 8.0
height = 160.0

[node name="breakable_ground" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_vmnb5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(80, 8)
shape = SubResource("RectangleShape2D_8demv")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.23000002, 0.23000002, 1)
position = Vector2(80, 8)
scale = Vector2(1.25, 0.125)
texture = ExtResource("1_ru5g4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_vmnb5")
debug_color = Color(0.38688403, 0.5031586, 0.9124095, 0.41960785)

[node name="break_time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="break_time" to="." method="_on_break_time_timeout"]
